--- a/web_app_vue/package.json
+++ b/web_app_vue/package.json
@@ -7,6 +7,7 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@auth0/auth0-spa-js": "^1.18.0",
     "axios": "^0.21.4",
     "bulma": "^0.9.3",
     "bulma-toast": "^2.4.1",
