--- a/web_app_vue/package.json
+++ b/web_app_vue/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.18.0",
+    "@fullcalendar/adaptive": "^5.10.0",
     "@fullcalendar/core": "^5.10.0",
     "@fullcalendar/daygrid": "^5.10.0",
     "@fullcalendar/interaction": "^5.10.0",
