fixed directory structure added front-end authentication

--- a/web_app_django/pytest.ini
+++ b/web_app_django/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-DJANGO_SETTINGS_MODULE = schedule_optimizer.settings
+DJANGO_SETTINGS_MODULE = web_app_django.settings
 python_files = test_*.py
 addopts = -p no:warnings
 
