--- a/web_app_vue/package.json
+++ b/web_app_vue/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.21.4",
     "bulma": "^0.9.3",
     "bulma-toast": "^2.4.1",
+    "color-calendar": "^1.0.7",
     "core-js": "^3.6.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
