--- a/web_app_vue/package.json
+++ b/web_app_vue/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/daygrid": "^5.10.0",
     "@fullcalendar/interaction": "^5.10.0",
     "@fullcalendar/resource-timeline": "^5.10.0",
+    "@fullcalendar/timegrid": "^5.10.0",
     "@fullcalendar/vue3": "^5.10.0",
     "axios": "^0.21.4",
     "bulma": "^0.9.3",
