--- a/web_app_vue/package.json
+++ b/web_app_vue/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "@auth0/auth0-spa-js": "^1.18.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^3.0.0-5",
     "@fullcalendar/adaptive": "^5.10.0",
     "@fullcalendar/core": "^5.10.0",
     "@fullcalendar/daygrid": "^5.10.0",
@@ -30,6 +33,7 @@
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
+    "prettier": "2.4.1",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2"
   }
