--- a/web_app_vue/package.json
+++ b/web_app_vue/package.json
@@ -31,7 +31,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
+    "@vue/cli-service": "^4.5.15",
     "@vue/compiler-sfc": "^3.0.0",
     "prettier": "2.4.1",
     "sass": "^1.26.5",
